[metadata]
name = mayakit
author = Dan Bradham
author-email = danielbradham@gmail.com
summary = Useful scripts and plugins for Autodesk Maya.
description-file = README.rst
home-page = http://github.com/danbradham/mayakit.git
license = MIT License
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    Autodesk Maya
[files]
packages = mayakit
[bdist_wheel]
universal = 1
